# fastapi-docker

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
app/: main.py
k8s/: 01-secrets.yaml  02-postgres.yaml  03-fastapi.yaml  04-nginx.yaml
nginx/: nginx.conf
tests/: test_main.py
